fix: initial `api`/`impl` split & fix dependent modules