@@ -18,4 +18,8 @@ object Properties {
 	val FORGEJO_HOST = URI("https://git.greenhouse.lgbt")
 	const val FORGEJO_REPO = "Modding/silicate"
 	const val FORGEJO_COMITISH = Versions.MINECRAFT
+
+	val JAVAC_ARGS = listOf(
+		"--add-reads", "silicate.impl=ALL-UNNAMED"
+	)
 }
